# ManchesterChallenge

./: .gitignore  Dockerfile  README.md  docker-compose.yml  micro_ros_setup.bash
micro_ROS/: micro_ROS.ino
ros2_ws/: color_blob_detection.py
ros2_ws/install/: local_setup.sh  setup.sh
ros2_ws/install/signal_processing/lib/signal_processing/: signal_generator  signal_generator = signal_processing.signal_generator:mainsignal_processor  signal_processor
ros2_ws/log/: latest_build
ros2_ws/puzzlebot_description/: CMakeLists.txt  package.xml
ros2_ws/puzzlebot_description/urdf/: puzzlebot.urdf.xacro
ros2_ws/src/custom_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/custom_interfaces/msg/: ColorBlobDetection.msg  OpenLoopPose.msg  PIDGoalPose.msg
ros2_ws/src/custom_interfaces/srv/: GoalReached.srv  NextPIDWaypoint.srv  NextWaypoint.srv  SetProcessBool.srv
ros2_ws/src/motor_control/: package.xml  setup.py
ros2_ws/src/motor_control/launch/: motor_control.launch.py  motor_control_namespaces.launch.py  motor_launch.py  motor_namespaces_launch.py
ros2_ws/src/motor_control/motor_control/: controller.py  dc_motor.py  setpoint.py
ros2_ws/src/motor_control_real/: package.xml  setup.cfg  setup.py
ros2_ws/src/motor_control_real/launch/: motor_control_real.launch.py  motor_control_real_launch.py  open_loop_launch.py  prbs_launch.py  sim_comparison_launch.py
ros2_ws/src/motor_control_real/motor_control_real/: open_loop.py  prbs.py  set_point.py  set_point_sim.py  setpoint.py
ros2_ws/src/puzzlebot_behavior/: package.xml  setup.cfg  setup.py
ros2_ws/src/puzzlebot_behavior/puzzlebot_behavior/: traffic_fsm.py  traffic_light_fsm.py
ros2_ws/src/puzzlebot_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_bringup/config/: line_following_config.yaml  puzzletrack.yaml  traffic_light_fsm_config.yaml  traffic_light_line_following_config.yaml  traffic_light_pid_point_config.yaml
ros2_ws/src/puzzlebot_bringup/launch/: joystick_sim_real_teleop_bringup.launch.py  line_following.launch.py  puzzlebot_joystick_bringup.launch.py  puzzletrack.launch.py  traffic_light_fsm.launch.py  traffic_light_line_following.launch.py  traffic_light_pid_point.launch.py
ros2_ws/src/puzzlebot_control/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/puzzlebot_control/config/: joystick_teleop.yaml  open_loop_point_controller_config.yaml  pid_point_controller_config.yaml  point_PID_path.yaml  point_open_loop_path.yaml
ros2_ws/src/puzzlebot_control/launch/: joystick_teleop.launch.py  open_loop_point_controller.launch.py  pid_point_controller.launch.py  point_PID_controller.launch.py  point_open_loop_controller.launch.py  real_velocity_controller.launch.py  simulation_velocity_controller.launch.py
ros2_ws/src/puzzlebot_control/puzzlebot_control/: line_follow_controller.py  odometry_localization.py  open_loop_ctrl.py  open_loop_path_generator.py  open_loop_point_controller.py  pid_path_generator.py  pid_point_controller.py  point_PID_controller.py  point_PID_path_generator.py  point_open_loop_controller.py  point_open_loop_path_generator.py  real_velocity_controller.py  simulation_velocity_controller.py
ros2_ws/src/puzzlebot_controller/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_controller/config/: joystick_teleop.yaml  open_loop_path_generator_params.yaml  puzzlebot_controllers.yaml
ros2_ws/src/puzzlebot_controller/launch/: closed_loop_controller.launch.py  joystick_teleop.launch.py  open_loop_controller.launch.py  real_velocity_controller.launch.py  simulation_velocity_controller.launch.py  velocity_controller.launch.py
ros2_ws/src/puzzlebot_controller/puzzlebot_controller/: localization.py  open_loop_controller.py  open_loop_path_generator.py  real_velocity_controller.py  simulation_velocity_controller.py
ros2_ws/src/puzzlebot_description/: CMakeLists.txt  package.xml
ros2_ws/src/puzzlebot_description/launch/: display.launch.py  gazebo.launch.py
ros2_ws/src/puzzlebot_description/rviz/: display.rviz
ros2_ws/src/puzzlebot_description/urdf/: puzzlebot.gazebo.xacro  puzzlebot.urdf.xacro  puzzlebot_gazebo.xacro  puzzlebot_ros2_control.xacro
ros2_ws/src/puzzlebot_utils/: package.xml  setup.cfg  setup.py
ros2_ws/src/puzzlebot_vision/: package.xml  setup.cfg  setup.py
ros2_ws/src/puzzlebot_vision/puzzlebot_vision/: adaptive_image_filter.py  color_blob_detection.py  hough_line_detection.py  line_detection.py
ros2_ws/src/signal_processing/: package.xml  setup.py
ros2_ws/src/signal_processing/launch/: challenge1_launch.py  signal_processing.launch.py
ros2_ws/src/signal_processing/signal_processing/: signal_generator.py  signal_processor.py
ros2_ws/src/yolobot_recognition/: package.xml  setup.cfg  setup.py
ros2_ws/src/yolobot_recognition/yolobot_recognition/: yolov8_detection.py  yolov8_recognition.py
ros2_ws/src/yolov8_msgs/: CMakeLists.txt  package.xml
(+7 files in other folders)
